Create definition and handler for addOrUpdate
